# payroll

./: CMakeLists.txt  LICENSE  main.cpp  person.cpp
src/: main.cpp
